--- a/Week 1: HTML/Day 5: CSS/index.html
+++ b/Week 1: HTML/Day 5: CSS/index.html
@@ -72,7 +72,7 @@
     </div>
 
 
-    
+
     <div class="block">
         <h3>Heading</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores, fugit. Odit maiores tenetur pariatur iste harum laboriosam earum obcaecati, eveniet consequuntur quia perferendis quis nemo optio. Qui, sapiente? Illum, odio.</p>
@@ -88,7 +88,29 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores, fugit. Odit maiores tenetur pariatur iste harum laboriosam earum obcaecati, eveniet consequuntur quia perferendis quis nemo optio. Qui, sapiente? Illum, odio.</p>
     </div>
 
+    <div class="clr"></div>
+    <div class="p-box">
+        <h1>Hello</h1>
+        <h2>Goodbye</h2>
+    </div>
+
+    <ul class="my-list">
+        <li>List Item</li>
+        <li>List Item</li>
+        <li>List Item</li>
+        <li>List Item</li>
+        <li>List Item</li>
+        <li>List Item</li>
+        <li>List Item</li>
+        <li>List Item</li>
+        <li>List Item</li>
+        <li>List Item</li>
+        <li>List Item</li>
+        <li>List Item</li>
+    </ul>
     </div><!--./container-->
+
+    <a class="fix-me button" href="#">Hello</a>  <!--2 classes-->
     <div style="margin-top: 500px;"></div>
 
 </body>
@@ -111,6 +133,14 @@ margin -> border -> padding -> content
 
 25: 39
 
+--------------------------------------------------------
+positioning:
+1. static (default)
+2. relative (compare to its normal position)
+3. absolute 
+4. fixed (same poition no matter how you scroll it up)
+5.initial
+6.inherit
 
 
 ->
