--- a/Week 3: DOM/index.html
+++ b/Week 3: DOM/index.html
@@ -29,6 +29,7 @@
             <li class="list-group-item">Item 4</li>
             <!--<li>Item 5</li>-->
         </ul>
+        <span></span>
      </div>
    </div>
     
