--- a/Week 3: DOM/index.html
+++ b/Week 3: DOM/index.html
@@ -19,6 +19,11 @@
         <h2 class="title">Add Items</h2>
         <form class="form-inline mb-3">
             <input type="text" class="form-control mr-2">
+            <select class="form-control mr-2" >
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+            </select>
             <input type="submit" class="btn btn-dark" value="Submit">
         </form>
         <h2 class="title">Items</h2>
@@ -29,7 +34,15 @@
             <li class="list-group-item">Item 4</li>
             <!--<li>Item 5</li>-->
         </ul>
-        <span></span>
+        
+        <div id="output"></div>
+        <br>
+        <!--bootstrap >-->
+        <!--onclick="buttonClick(1)" -> old way: want to keep it seperate-->
+        <button class="btn btn-dark btn-black" id="button">Click Here</button>
+        <!--<span></span>-->
+        <br>
+        <div id="box" style="width:400px; height:200px; background: #f4f4f4"><h3>HELLO</h3></div>
      </div>
    </div>
     
