--- a/Week 3: DOM/index.html
+++ b/Week 3: DOM/index.html
@@ -10,43 +10,33 @@
 <body>
     <header id="main-header" class="bg-success text-white p-4 mb-3">
         <div class="container">
-            <!--<span>1</span>-->
-            <h1 id="header-title">Item Lister <span style="display:none">123</span></span></h1>
+        <div class="row">
+            <div class="col-md-6">
+                <h1 id="header-title">Item Lister</h1>
+            </div>
+            <div class="col-md-6 align-self-center">
+                <input type="text" class="form-control" id="filter" placeholder="Search Items...">
+            </div>
+        </div>
         </div>
     </header>
     <div class="container">
-      <div id="main" class="card card-body">
+    <div id="main" class="card card-body">
         <h2 class="title">Add Items</h2>
-        <form class="form-inline mb-3">
-            <input type="text" class="form-control mr-2">
-            <select class="form-control mr-2" >
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-            </select>
-            <input type="submit" class="btn btn-dark" value="Submit">
+        <form id="addForm" class="form-inline mb-3">
+        <input type="text" class="form-control mr-2" id="item">
+        <input type="submit" class="btn btn-dark" value="Submit">
         </form>
         <h2 class="title">Items</h2>
         <ul id="items" class="list-group">
-            <li class="list-group-item">Item 1</li>
-            <li class="list-group-item">Item 2</li>
-            <li class="list-group-item">Item 3</li>
-            <li class="list-group-item">Item 4</li>
-            <!--<li>Item 5</li>-->
+        <li class="list-group-item">Item 1 <button class="btn btn-danger btn-sm float-right delete">X</button></li>
+        <li class="list-group-item">Item 2 <button class="btn btn-danger btn-sm float-right delete">X</button></li>
+        <li class="list-group-item">Item 3 <button class="btn btn-danger btn-sm float-right delete">X</button></li>
+        <li class="list-group-item">Item 4 <button class="btn btn-danger btn-sm float-right delete">X</button></li>
         </ul>
-        
-        <div id="output"></div>
-        <br>
-        <!--bootstrap >-->
-        <!--onclick="buttonClick(1)" -> old way: want to keep it seperate-->
-        <button class="btn btn-dark btn-black" id="button">Click Here</button>
-        <!--<span></span>-->
-        <br>
-        <div id="box" style="width:400px; height:200px; background: #f4f4f4"><h3>HELLO</h3></div>
-     </div>
-   </div>
-    
-   <script src="dom.js"></script>
+    </div>
+    </div>
+    <script src="main.js"></script>
+
 </body>
 </html>
-  
