--- a/Practice/Week 3 DOM/index.html
+++ b/Practice/Week 3 DOM/index.html
@@ -14,14 +14,15 @@
     <div id="box2-2" class="box2-2">
         <ul>
             <li>idea-1</li>
-            <ul id="idea-1">
+            <ul class="subE" id="idea-1">
                 <li>idea 1-1</li>
                 <li>idea 1-2</li>
                 <li>idea 1-3</li>
             </ul>
             <li>idea-2</li>
+            <ul class="subE" id="idea-2"></ul>
             <li>idea-3</li>
-            <ul id="idea-3">
+            <ul class="subE" id="idea-3">
                 <li>idea 3-1</li>
                 <li>idea 3-2</li>
             </ul>
